--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1430,6 +1430,7 @@ html.dark {
 .top-bar {
   padding: 30px 0;
   position: relative;
+  z-index: 1;
 }
 @media (max-width: 991.98px) {
   .top-bar {
@@ -1851,6 +1852,90 @@ html.dark {
 ::-webkit-scrollbar-track {
   border-radius: 0;
   background-color: var(--scrollball-track-color);
+}
+
+.slideshow {
+  position: relative;
+  margin: 40px 0;
+}
+@media (max-width: 767.98px) {
+  .slideshow {
+    margin-top: 30px;
+  }
+}
+.slideshow__inner {
+  overflow: hidden;
+}
+.slideshow__item {
+  position: relative;
+  padding-top: 34%;
+  flex-shrink: 0;
+  width: 100%;
+}
+@media (max-width: 767.98px) {
+  .slideshow__item {
+    padding-top: 50%;
+  }
+}
+.slideshow__img {
+  position: absolute;
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  top: 0;
+  left: 0;
+}
+.slideshow__page {
+  width: 12.8%;
+  --color: #fff;
+  align-items: center;
+  gap: 25px;
+  position: absolute;
+  bottom: 15%;
+  left: 5.2%;
+}
+.slideshow__num {
+  color: var(--color);
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: 1.44; /* 144.444% */
+}
+@media (max-width: 767.98px) {
+  .slideshow__num {
+    font-size: 1.4rem;
+    line-height: 1.43; /* 142.857% */
+  }
+}
+.slideshow__slider {
+  position: relative;
+  width: 100%;
+  height: 4px;
+  flex-shrink: 0;
+  background: var(--color);
+}
+.slideshow__slider::after, .slideshow__slider::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  translate: 0 -50%;
+  width: 14px;
+  height: 14px;
+  border: 4px solid var(--color);
+  border-radius: 50%;
+}
+@media (max-width: 767.98px) {
+  .slideshow__slider::after, .slideshow__slider::before {
+    border-width: 3px;
+  }
+}
+.slideshow__slider::before {
+  left: 0;
+  transform: translate(-95%);
+}
+.slideshow__slider::after {
+  right: 0;
+  transform: translate(95%);
 }
 
 /*# sourceMappingURL=main.css.map */
