--- a/templates/header.html
+++ b/templates/header.html
@@ -12,7 +12,7 @@
     </a>
 
     <!-- Navbar -->
-    <nav id="navbar" class="navbar show">
+    <nav id="navbar" class="navbar hide">
       <button class="navbar__close--btb js-toggle" toggle-target="#navbar">
         <img src="./assets/img/icons/arrow-left.svg" class="icon" alt="" />
       </button>
