grid system desktop firts

--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -7,7 +7,7 @@
   padding-top: 54px;
   display: none;
 
-  @include abstracts.breakpoint(lg) {
+  @include abstracts.screen(lg) {
     padding-top: 0;
     position: static;
   }
@@ -26,7 +26,7 @@
       translate: -50% 0;
       filter: var(--dropdown-arrow-color);
     }
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       padding: 0 40px;
       border-radius: 0;
       background: transparent;
@@ -36,7 +36,7 @@
       }
     }
 
-    @include abstracts.breakpoint(sm) {
+    @include abstracts.screen(sm) {
       padding: 0 20px;
     }
   }
@@ -51,7 +51,7 @@
     width: var(--main--column-width);
     border-right: 1px solid var(--top-menu-border-color);
     overflow-y: auto;
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       width: 100%;
       height: auto;
       border-right: none;
@@ -73,11 +73,11 @@
     width: 36px;
     height: 36px;
 
-    @include abstracts.breakpoint(xl) {
+    @include abstracts.screen(xl) {
       display: none;
     }
 
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       display: block;
     }
   }
@@ -107,14 +107,14 @@
     font-size: 1.6rem;
     font-weight: 500;
     line-height: 1.5; /* 150% */
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       margin-bottom: 26px;
     }
   }
 
   &__list {
     margin-top: 13px;
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       margin-top: 0;
     }
   }
@@ -148,7 +148,7 @@
   gap: 30px;
   padding-left: 30px;
   overflow-y: auto;
-  @include abstracts.breakpoint(lg) {
+  @include abstracts.screen(lg) {
     padding-top: 14px;
     padding-left: 0;
     position: initial;
@@ -161,7 +161,7 @@
     height: calc(min(582px, 100vh - 158px) - 60px);
     grid-template-columns: repeat(4, 1fr);
     padding-left: 0;
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       grid-template-columns: 1fr;
       height: auto;
     }
