--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -1,30 +1,30 @@
 @use "../abstracts";
 .logo {
-    display: flex;
-    align-items: center;
-    column-gap: 14px;
+  display: flex;
+  align-items: center;
+  column-gap: 14px;
 
-    @include abstracts.breakpoint(lg) {
-        column-gap: 10px;
-        margin-left: 40px;
-    }
+  @include abstracts.screen(lg) {
+    column-gap: 10px;
+    margin-left: 40px;
+  }
 
-    @include abstracts.breakpoint(md) {
-        margin-left: 0;
-    }
+  @include abstracts.screen(md) {
+    margin-left: 0;
+  }
 
-    &__title {
-        font-size: 2.2rem;
-        font-weight: 700;
-        line-height: 1.45; /* 145.455% */
-        @include abstracts.breakpoint(lg) {
-            font-size: 1.8rem;
-        }
+  &__title {
+    font-size: 2.2rem;
+    font-weight: 700;
+    line-height: 1.45; /* 145.455% */
+    @include abstracts.screen(lg) {
+      font-size: 1.8rem;
     }
+  }
 
-    &__img {
-        @include abstracts.breakpoint(lg) {
-            width: 24px;
-        }
+  &__img {
+    @include abstracts.screen(lg) {
+      width: 24px;
     }
+  }
 }
