--- a/scss/components/_slideshow.scss
+++ b/scss/components/_slideshow.scss
@@ -2,7 +2,7 @@
 .slideshow {
   position: relative;
   margin: 40px 0;
-  @include abstracts.breakpoint(md) {
+  @include abstracts.screen(md) {
     margin-top: 30px;
   }
   &__inner {
@@ -15,7 +15,7 @@
     flex-shrink: 0;
     width: 100%;
 
-    @include abstracts.breakpoint(md) {
+    @include abstracts.screen(md) {
       padding-top: 50%;
     }
   }
@@ -45,7 +45,7 @@
     font-size: 1.8rem;
     font-weight: 500;
     line-height: 1.44; /* 144.444% */
-    @include abstracts.breakpoint(md) {
+    @include abstracts.screen(md) {
       font-size: 1.4rem;
       line-height: 1.43; /* 142.857% */
     }
@@ -68,7 +68,7 @@
       height: 14px;
       border: 4px solid var(--color);
       border-radius: 50%;
-      @include abstracts.breakpoint(md) {
+      @include abstracts.screen(md) {
         border-width: 3px;
       }
     }
