--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -177,9 +177,13 @@ select {
 .container-fluid, .container {
   --grid-gutter-x: 30px;
   --grid-gutter-y: 0;
-  width: 100%;
+  width: 1370px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.container {
+  width: 1370px;
 }
 
 .row {
@@ -1378,6 +1382,9 @@ select {
   --scrollball-track-color: rgba(0, 0, 0, 0);
   --sidebar-bg: #fff;
   --sidebar-shadow: rgba(200, 200, 200, 0.4);
+  --cate-item-bg: #eee;
+  --cate-item-thumb-bg: #fff;
+  --cate-item-title-color: #000;
 }
 @media (max-width: 991.98px) {
   :root {
@@ -1385,12 +1392,17 @@ select {
     --header-shadow-color: rgba(237, 237, 246, 0.2);
   }
 }
+@media (max-width: 767.98px) {
+  :root {
+    --cate-item-bg: #fff;
+  }
+}
 
 html.dark {
   --text-color: #ffffff;
   --icon-color: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%)
     contrast(102%);
-  --body-bg: #171c28;
+  --body-bg: #292e39;
   --header-bg-color: #171c28;
   --top-act-group: #292e39;
   --top-act-group-shadow: rgba(0, 0, 0, 0.2);
@@ -1406,6 +1418,9 @@ html.dark {
   --scrollball-track-color: rgba(255, 255, 255, 0);
   --sidebar-bg: #292e39;
   --sidebar-shadow: rgba(23, 28, 40, 0.4);
+  --cate-item-bg: #171c28;
+  --cate-item-thumb-bg: #292e39;
+  --cate-item-title-color: #fff;
 }
 @media (max-width: 991.98px) {
   html.dark {
@@ -1856,12 +1871,6 @@ html.dark {
 
 .slideshow {
   position: relative;
-  margin: 40px 0;
-}
-@media (max-width: 767.98px) {
-  .slideshow {
-    margin-top: 30px;
-  }
 }
 .slideshow__inner {
   overflow: hidden;
@@ -1936,6 +1945,104 @@ html.dark {
 .slideshow__slider::after {
   right: 0;
   transform: translate(95%);
+}
+
+.cate-item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  height: 100%;
+  padding: 20px 26px;
+  border-radius: 16px;
+  background: var(--cate-item-bg);
+}
+@media (max-width: 1399.98px) {
+  .cate-item {
+    flex-direction: column;
+  }
+}
+@media (max-width: 767.98px) {
+  .cate-item {
+    flex-direction: row;
+  }
+}
+.cate-item__thumb {
+  border-radius: 8px;
+  width: 116px;
+  height: 116px;
+  object-fit: contain;
+  background: var(--cate-item-thumb-bg);
+}
+@media (max-width: 1399.98px) {
+  .cate-item__thumb {
+    width: 100%;
+    height: 150px;
+  }
+}
+@media (max-width: 767.98px) {
+  .cate-item__thumb {
+    width: 88px;
+    height: 88px;
+  }
+}
+.cate-item__title {
+  color: var(--cate-item-title-color);
+  font-size: 2.2rem;
+  font-weight: 700;
+  line-height: 1.45; /* 145.455% */
+}
+@media (max-width: 767.98px) {
+  .cate-item__title {
+    font-size: 1.8rem;
+  }
+}
+.cate-item__desc {
+  margin-top: 6px;
+  padding-right: 30px;
+  font-size: 1.6rem;
+  line-height: 1.5; /* 150% */
+}
+@media (max-width: 1399.98px) {
+  .cate-item__desc {
+    padding-right: 0;
+  }
+}
+@media (max-width: 767.98px) {
+  .cate-item__desc {
+    font-size: 1.4rem;
+    line-height: 1.43; /* 142.857% */
+  }
+}
+
+.home__container {
+  margin-top: 40px;
+}
+@media (max-width: 767.98px) {
+  .home__container {
+    margin-top: 30px;
+  }
+}
+.home__heading {
+  margin-bottom: 20px;
+  color: var(--text-color);
+  font-size: 2.4rem;
+  font-weight: 700;
+  line-height: 1.42; /* 141.667% */
+}
+.home__cate {
+  --grid-gutter-x: 51px;
+  --grid-gutter-y: 51px;
+}
+@media (max-width: 991.98px) {
+  .home__cate {
+    --grid-gutter-x: 24px;
+    --grid-gutter-y: 24px;
+  }
+}
+@media (max-width: 767.98px) {
+  .home__cate {
+    --grid-gutter-y: 20px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
