--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -3,7 +3,7 @@ html.dark {
   --text-color: #ffffff;
   --icon-color: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%)
     contrast(102%);
-  --body-bg: #171c28;
+  --body-bg: #292e39;
   --header-bg-color: #171c28;
   --top-act-group: #292e39;
   --top-act-group-shadow: rgba(0, 0, 0, 0.2);
@@ -24,6 +24,11 @@ html.dark {
   // sidebar
   --sidebar-bg: #292e39;
   --sidebar-shadow: rgba(23, 28, 40, 0.4);
+
+  // category Item
+  --cate-item-bg: #171c28;
+  --cate-item-thumb-bg: #292e39;
+  --cate-item-title-color: #fff;
 
   @include abstracts.screen(lg) {
     --header-shadow-color: rgba(0, 0, 0, 0.2);
