--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,3 +1,4 @@
+@use "../abstracts";
 *,
 ::before,
 ::after {
@@ -24,6 +25,8 @@ button {
   border: none;
   outline: none;
   background: transparent;
+  padding: 0;
+  cursor: pointer;
 }
 
 button,
@@ -36,4 +39,11 @@ select {
 
 .icon {
   filter: var(--icon-color);
+}
+
+.container {
+  @include abstracts.screen(sm) {
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+  }
 }
