--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -7,7 +7,6 @@
     }
   }
   &__heading {
-    margin-bottom: 20px;
     color: var(--text-color);
     font-size: 2.4rem;
     font-weight: 700;
@@ -26,5 +25,12 @@
     @include abstracts.screen(md) {
       --grid-gutter-y: 20px;
     }
+  }
+
+  &__row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
   }
 }
