--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -23,6 +23,14 @@
   --cate-item-bg: #eee;
   --cate-item-thumb-bg: #fff;
   --cate-item-title-color: #000;
+
+  // Filter button
+  --filter-btn-color: #6c6c72;
+  --filter-btn-bg: #fff;
+
+  // product card
+  --product-card-bg: #fff;
+  --product-card-shadow: rgba(237, 237, 246, 0.2);
   @include abstracts.screen(lg) {
     --header-bg-color: #fff;
     --header-shadow-color: rgba(237, 237, 246, 0.2);
