--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -28,17 +28,26 @@ button {
   padding: 0;
   cursor: pointer;
 }
-
+a,
+img,
 button,
 input,
 textarea,
 select {
+  padding: 0;
   font-family: inherit;
   color: inherit;
+  outline: none;
+  border: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .icon {
   filter: var(--icon-color);
+}
+
+input {
+  background: transparent;
 }
 
 .container {
