--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -26,15 +26,62 @@
 
   box-shadow: 0px 20px 60px rgba(124, 124, 124, 0.2);
 
-  &:not(&--liked) .like-btn__icon--liked {
+  &:not(&--liked) &__icon--liked {
     display: none;
   }
 
-  &--liked .like-btn__icon {
+  &--liked &__icon {
     display: none;
   }
 
   &__icon--liked {
     margin-top: 10px;
+  }
+}
+
+//buttons
+
+.btn {
+  height: 46px;
+  background: #f8f8f8;
+
+  font-size: 1.8rem;
+  font-weight: 500;
+  border-radius: 6px;
+  padding: 0 20px;
+  user-select: none;
+
+  + .btn {
+    margin-left: 20px;
+  }
+
+  &--text {
+    font-family: 400;
+
+    color: #9e9da8;
+    background: transparent;
+  }
+
+  &--primary {
+    color: #171c28;
+    background: #ffb700;
+  }
+
+  &--outline {
+    border: 1px solid #d2d1d6;
+    background: transparent;
+  }
+
+  &--rounded {
+    border-radius: 99px;
+  }
+  &[disabled],
+  &--disabled {
+    opacity: 0.5;
+    pointer-events: none;
+  }
+
+  &:hover {
+    opacity: 0.9;
   }
 }
