--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -38,6 +38,12 @@ html.dark {
   --product-card-bg: #171c28;
   --product-card-shadow: rgba(0, 0, 0, 0.2);
 
+  //filter form
+  --filter-form-bg: #2f3441;
+  --filter-form-shadow: rgba(0, 0, 0, 0.4);
+  --filter-form-tag-bg: #171c28;
+  --filter-form-arrow: brightness(0) saturate(100%) invert(18%) sepia(10%) saturate(1208%) hue-rotate(185deg)
+    brightness(91%) contrast(89%);
   @include abstracts.screen(lg) {
     --header-shadow-color: rgba(0, 0, 0, 0.2);
   }
