--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -31,6 +31,11 @@
   // product card
   --product-card-bg: #fff;
   --product-card-shadow: rgba(237, 237, 246, 0.2);
+  //filter form
+  --filter-form-bg: #fff;
+  --filter-form-shadow: rgba(200, 200, 200, 0.4);
+  --filter-form-tag-bg: #f8f8f8;
+  --filter-form-footer-bg: #fff;
   @include abstracts.screen(lg) {
     --header-bg-color: #fff;
     --header-shadow-color: rgba(237, 237, 246, 0.2);
