--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -5,6 +5,7 @@ html.dark {
     contrast(102%);
   --body-bg: #292e39;
   --header-bg-color: #171c28;
+  --footer-text-color: #6e6d74;
   --top-act-group: #292e39;
   --top-act-group-shadow: rgba(0, 0, 0, 0.2);
   --top-act-separate: #ededf6;
