--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -8,6 +8,7 @@
   --top-act-group-shadow: rgba(237, 237, 246, 0.2);
   --top-act-separate: #ededf6;
   --header-bg-color: #eee;
+  --footer-bg-color: var(--header-bg-color);
   // dropdown
   --dropdown-shadow-color: rgba(200, 200, 200, 0.4);
   --dropdown-bg-color: #fff;
