--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,122 @@
-<div class="header__inner">
-    <!-- <h2>Footer</h2> -->
+<div class="container">
+  <div class="footer__inner">
+    <div class="footer__row">
+      <!-- footer col 1 -->
+      <div class="footer__col">
+        <!-- Logo -->
+        <a href="./" class="logo footer__logo">
+          <img src="./assets/img/icons/logo.svg" alt="grocerymart" class="logo__img" />
+          <h1 class="logo__title">grocerymart</h1>
+        </a>
+        <p class="footer__desc">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime deserunt blanditiis provident, harum dolorum
+          id optio voluptas
+        </p>
+        <p class="footer__help-text">Receive product news and updates.</p>
+        <form action="" class="footer__form">
+          <input type="" class="footer__input" placeholder="Email Address" />
+          <button class="btn btn--primary">SEND</button>
+        </form>
+      </div>
+
+      <!-- footer col 2 -->
+      <div class="footer__col">
+        <h3 class="footer__heading">Shop</h3>
+        <ul class="footer__list">
+          <li>
+            <a href="#!" class="footer__link">All Departments</a>
+          </li>
+          <li>
+            <a href="#!" class="footer__link">Fashion Deals</a>
+          </li>
+          <li>
+            <a href="#!" class="footer__link">Home & Living Specials</a>
+          </li>
+          <li>
+            <a href="#!" class="footer__link">Electronics Discounts</a>
+          </li>
+          <li>
+            <a href="#!" class="footer__link">Beauty Bargains</a>
+          </li>
+        </ul>
+      </div>
+
+      <!-- footer col 3 -->
+      <div class="footer__col">
+        <h3 class="footer__heading">Support</h3>
+        <ul class="footer__list">
+          <li>
+            <a href="#!" class="footer__link">Store locator</a>
+          </li>
+          <li>
+            <a href="#!" class="footer__link">Order status</a>
+          </li>
+        </ul>
+      </div>
+
+      <!-- footer col 4 -->
+      <div class="footer__col">
+        <h3 class="footer__heading">Company</h3>
+        <ul class="footer__list">
+          <li>
+            <a href="#!" class="footer__link">Customer service</a>
+          </li>
+          <li>
+            <a href="#!" class="footer__link">Term of Use</a>
+          </li>
+          <li>
+            <a href="#!" class="footer__link">Privacy</a>
+          </li>
+          <li>
+            <a href="#!" class="footer__link">carerrs</a>
+          </li>
+          <li>
+            <a href="#!" class="footer__link">About</a>
+          </li>
+          <li>
+            <a href="#!" class="footer__link">Affilliates</a>
+          </li>
+        </ul>
+      </div>
+
+      <!-- footer col 5 -->
+      <div class="footer__col">
+        <h3 class="footer__heading">Contact</h3>
+        <ul class="footer__list">
+          <li>
+            <p class="footer__lable">Email</p>
+            <a href="mailto:contact@gmail.com" class="footer__link">contact@gmail.com</a>
+          </li>
+          <li>
+            <p class="footer__lable">Telephone</p>
+            <a href="tel:033265668" class="footer__link">0339285356</a>
+          </li>
+          <li>
+            <p class="footer__lable">Address</p>
+            <p class="footer__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, inventore?</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer__bottom">
+      <p class="footer__copyright">Grocery Mart - 2024 NguyenDucTan</p>
+      <div class="footer__socials">
+        <a href="" class="footer__social-link footer__social-link--facebook">
+          <img src="./assets/img/icons/facebook.svg" class="footer__social-icon" alt="" />
+        </a>
+        <a href="" class="footer__social-link footer__social-link--youtube">
+          <img src="./assets/img/icons/youtube.svg" class="footer__social-icon" alt="" />
+        </a>
+        <a href="" class="footer__social-link footer__social-link--tiktok">
+          <img src="./assets/img/icons/tiktok.svg" class="footer__social-icon" alt="" />
+        </a>
+        <a href="" class="footer__social-link footer__social-link--twitter">
+          <img src="./assets/img/icons/twitter.svg" class="footer__social-icon" alt="" />
+        </a>
+        <a href="" class="footer__social-link footer__social-link--linkedin">
+          <img src="./assets/img/icons/linkedin.svg" class="footer__social-icon" alt="" />
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
