--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -37,6 +37,15 @@
   --filter-form-shadow: rgba(200, 200, 200, 0.4);
   --filter-form-tag-bg: #f8f8f8;
   --filter-form-footer-bg: #fff;
+
+  // Auth
+  --auth-content-bg: #fff;
+
+  // form
+  --form-placeholder-color: #d2d1d6;
+  @include abstracts.screen(md) {
+    --auth-intro-bg: #fff;
+  }
   @include abstracts.screen(lg) {
     --header-bg-color: #fff;
     --header-shadow-color: rgba(237, 237, 246, 0.2);
