--- a/templates/header-logined.html
+++ b/templates/header-logined.html
@@ -6,9 +6,9 @@
     </button>
 
     <!-- Logo -->
-    <a href="./" class="logo top-bar__logo">
-      <img src="./assets/img/icons/logo.svg" alt="grocerymart" class="logo__img top-bar__logo-img" />
-      <h1 class="logo__title top-bar__logo-title">grocerymart</h1>
+    <a href="./" class="logo">
+      <img src="./assets/img/icons/logo.svg" alt="grocerymart" class="logo__img" />
+      <h1 class="logo__title">grocerymart</h1>
     </a>
 
     <!-- Navbar -->
@@ -704,8 +704,28 @@
 
     <!-- Action -->
     <div class="top-act">
-      <a href="./signIn.html" class="btn btn--text d-md-none">Sign In</a>
-      <a href="./signUp.html" class="btn btn--primary top-act__sign-up">Sign Up</a>
+      <div class="top-act__group d-lg-none">
+        <button class="top-act__btn">
+          <img src="./assets/img/icons/search.svg" alt="" class="top-act__icon icon" />
+        </button>
+      </div>
+      <div class="top-act__group d-md-none">
+        <button class="top-act__btn">
+          <img src="./assets/img/icons/heart.svg" alt="" class="top-act__icon icon" />
+          <span class="top-act__title">03</span>
+        </button>
+
+        <div class="top-act__separate"></div>
+
+        <button class="top-act__btn">
+          <img src="./assets/img/icons/cart.svg" alt="" class="top-act__icon icon" />
+          <span class="top-act__title">$65.42</span>
+        </button>
+      </div>
+
+      <div class="top-act__user">
+        <img src="./assets/img/avatar.jpg" alt="" class="top-act__avatar" />
+      </div>
     </div>
   </div>
 </div>
