--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -7,3 +7,7 @@
 @forward "./filter-form";
 @forward "./form";
 @forward "./message";
+@forward "./breadcrumbs";
+@forward "./review-card";
+@forward "./text-content";
+@forward "./search-bar";
