--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -56,3 +56,13 @@ input {
     padding-right: 20px !important;
   }
 }
+
+i,
+em {
+  font-style: italic;
+}
+
+b,
+strong {
+  font-weight: 600;
+}
