--- a/scss/components/_filter-form.scss
+++ b/scss/components/_filter-form.scss
@@ -46,19 +46,6 @@
   &__form {
     margin-top: 30px;
 
-    &--lable {
-      display: block;
-      font-size: 2.2rem;
-      font-weight: 500;
-      line-height: 1.45; /* 145.455% */
-
-      &--small {
-        margin-bottom: 10px;
-        font-size: 1.4rem;
-        line-height: 1.43; /* 142.857% */
-      }
-    }
-
     &--group {
       margin-top: 20px;
 
@@ -100,8 +87,7 @@
       }
     }
 
-    &--text-input,
-    &-select-wrap {
+    &--text-input {
       border-radius: 6px;
       border: 1px solid #d2d1d6;
     }
@@ -152,60 +138,6 @@
 
       &-icon {
         margin-left: 10px;
-      }
-    }
-
-    &-select-wrap {
-      display: flex;
-      align-items: center;
-      height: 45px;
-    }
-
-    &-select {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-
-      padding: 0 14px;
-      min-width: var(--width, 108px);
-      height: calc(100% - 10px);
-
-      font-size: 1.4rem;
-      font-weight: 500;
-      line-height: 1.43; /* 142.857% */
-      cursor: pointer;
-
-      @include abstracts.screen(xl) {
-        flex: 1;
-      }
-    }
-
-    &-select + &-select {
-      border-left: 1px solid #d2d1d6;
-    }
-
-    &-tags {
-      display: flex;
-      flex-wrap: wrap;
-      column-gap: 20px;
-      row-gap: 10px;
-      @include abstracts.screen(sm) {
-        gap: 10px;
-      }
-    }
-
-    &-tag {
-      border-radius: 6px;
-      background: var(--filter-form-tag-bg);
-
-      padding: 6px 12px;
-      color: #9e9da8;
-      font-size: 1.4rem;
-      font-weight: 500;
-      line-height: 1.43; /* 142.857% */
-
-      &:hover {
-        color: var(--text-color);
       }
     }
   }
