--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -42,7 +42,7 @@ html.dark {
   //filter form
   --filter-form-bg: #2f3441;
   --filter-form-shadow: rgba(0, 0, 0, 0.4);
-  --filter-form-tag-bg: #171c28;
+  --form-tag-bg: #171c28;
   --filter-form-arrow: brightness(0) saturate(100%) invert(18%) sepia(10%) saturate(1208%) hue-rotate(185deg)
     brightness(91%) contrast(89%);
 
@@ -54,7 +54,37 @@ html.dark {
 
   // form
   --form-placeholder-color: #b9babe;
+
+  // Product Detail
+  --product-detail-bg: #292e39;
+  --product-detail-info-bg: #171c28;
+  --product-detail-info-content-bg: transparent;
+  --product-detail-tag-bg: #292e39;
+
+  //breadcrumbs
+  --breadcrumbs-bg: #171c28;
+  --breadcrumbs-shadow: rgba(23, 28, 40, 0.2);
+
+  // Search bar
+  --search-bar-bg: #171c28;
+
+  // Text content
+  --text-content-hr-bg: #171c28;
+
+  // Reivew card
+  --review-card-bg: #171c28;
+
   @include abstracts.screen(lg) {
     --header-shadow-color: rgba(0, 0, 0, 0.2);
+  }
+
+  @include abstracts.screen(md) {
+    --cate-item-bg: #fff;
+    // product detial
+    --product-detail-bg: #292e39;
+    --product-detail-info-bg: transparent;
+    --product-detail-info-content-bg: #171c28;
+
+    --breadcrumbs-bg: #171c28;
   }
 }
