--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -215,6 +215,14 @@
     @extend %flex-ItemCenter;
     gap: 10px;
     padding: 13px 20px;
+
+    &-wrap {
+      position: relative;
+
+      &:hover .act-dropdown {
+        display: block;
+      }
+    }
   }
 
   &__title {
@@ -261,5 +269,112 @@
 
   &__qnt {
     margin-left: auto;
+  }
+}
+
+.act-dropdown {
+  position: absolute;
+  top: 50px;
+  right: -60px;
+  padding-top: 22px;
+  width: min(500px, 100vw);
+  display: none;
+
+  &__inner {
+    position: relative;
+    padding: 30px;
+    border-radius: 20px;
+    background: var(--header-act-dropdown-bg);
+    box-shadow: 0px 40px 90px 20px var(--header-act-dropdown-shadow);
+  }
+
+  &__arrow {
+    position: absolute;
+    top: -12px;
+    right: 108px;
+    filter: var(--dropdown-arrow-color);
+  }
+
+  &__top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+
+  &__title {
+    font-size: 2.2rem;
+    font-weight: 500;
+    line-height: 1.45; /* 145.455% */
+  }
+
+  &__view-all {
+    color: #0071dc;
+    font-size: 1.8rem;
+    line-height: 1.45; /* 145.455% */
+  }
+
+  &__bottom {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    margin: 20px 0;
+    padding: 20px 0;
+    border-width: 1.6px 0;
+    border-color: var(--header-act-dropdown-bottom);
+    border-style: solid;
+  }
+
+  &__row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    &--bold {
+      font-weight: 500;
+    }
+  }
+
+  &__lable,
+  &__value {
+    font-size: 1.6rem;
+    line-height: 1.45; /* 145.455% */
+  }
+
+  &__checkout {
+    display: flex;
+    justify-content: flex-end;
+  }
+}
+
+.cart-preview-item {
+  text-align: left;
+  &__img-wrap {
+    position: relative;
+    padding-top: 100%;
+    border: 1.5px solid var(--header-act-dropdown-bottom);
+    border-radius: 4px;
+  }
+
+  &__thumb {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+
+  &__title {
+    margin-top: 14px;
+    font-size: 1.4rem;
+    line-height: 1.43; /* 142.857% */
+  }
+
+  &__price {
+    margin-top: 6px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.47; /* 146.667% */
   }
 }
