--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -20,6 +20,10 @@
   --sidebar-bg: #fff;
   --sidebar-shadow: rgba(200, 200, 200, 0.4);
 
+  // Header
+  --header-act-dropdown-bg: #fff;
+  --header-act-dropdown-shadow: rgba(200, 200, 200, 0.4);
+  --header-act-dropdown-bottom: #d2d1d6;
   // category Item
   --cate-item-bg: #eee;
   --cate-item-thumb-bg: #fff;
