--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1429,6 +1429,9 @@ strong {
   --scrollball-track-color: rgba(0, 0, 0, 0);
   --sidebar-bg: #fff;
   --sidebar-shadow: rgba(200, 200, 200, 0.4);
+  --header-act-dropdown-bg: #fff;
+  --header-act-dropdown-shadow: rgba(200, 200, 200, 0.4);
+  --header-act-dropdown-bottom: #d2d1d6;
   --cate-item-bg: #eee;
   --cate-item-thumb-bg: #fff;
   --cate-item-title-color: #000;
@@ -1493,6 +1496,9 @@ html.dark {
   --scrollball-track-color: rgba(255, 255, 255, 0);
   --sidebar-bg: #292e39;
   --sidebar-shadow: rgba(23, 28, 40, 0.4);
+  --header-act-dropdown-bg: #2f3441;
+  --header-act-dropdown-shadow: rgba(23, 28, 40, 0.4);
+  --header-act-dropdown-bottom: #171c28;
   --cate-item-bg: #171c28;
   --cate-item-thumb-bg: #292e39;
   --cate-item-title-color: #fff;
@@ -1748,6 +1754,12 @@ html.dark {
   gap: 10px;
   padding: 13px 20px;
 }
+.top-act__btn-wrap {
+  position: relative;
+}
+.top-act__btn-wrap:hover .act-dropdown {
+  display: block;
+}
 .top-act__title {
   font-size: 1.5rem;
   font-weight: 500;
@@ -1787,6 +1799,99 @@ html.dark {
 }
 .nav-btn__qnt {
   margin-left: auto;
+}
+
+.act-dropdown {
+  position: absolute;
+  top: 50px;
+  right: -60px;
+  padding-top: 22px;
+  width: min(500px, 100vw);
+  display: none;
+}
+.act-dropdown__inner {
+  position: relative;
+  padding: 30px;
+  border-radius: 20px;
+  background: var(--header-act-dropdown-bg);
+  box-shadow: 0px 40px 90px 20px var(--header-act-dropdown-shadow);
+}
+.act-dropdown__arrow {
+  position: absolute;
+  top: -12px;
+  right: 108px;
+  filter: var(--dropdown-arrow-color);
+}
+.act-dropdown__top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.act-dropdown__title {
+  font-size: 2.2rem;
+  font-weight: 500;
+  line-height: 1.45; /* 145.455% */
+}
+.act-dropdown__view-all {
+  color: #0071dc;
+  font-size: 1.8rem;
+  line-height: 1.45; /* 145.455% */
+}
+.act-dropdown__bottom {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  margin: 20px 0;
+  padding: 20px 0;
+  border-width: 1.6px 0;
+  border-color: var(--header-act-dropdown-bottom);
+  border-style: solid;
+}
+.act-dropdown__row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.act-dropdown__row--bold {
+  font-weight: 500;
+}
+.act-dropdown__lable, .act-dropdown__value {
+  font-size: 1.6rem;
+  line-height: 1.45; /* 145.455% */
+}
+.act-dropdown__checkout {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.cart-preview-item {
+  text-align: left;
+}
+.cart-preview-item__img-wrap {
+  position: relative;
+  padding-top: 100%;
+  border: 1.5px solid var(--header-act-dropdown-bottom);
+  border-radius: 4px;
+}
+.cart-preview-item__thumb {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.cart-preview-item__title {
+  margin-top: 14px;
+  font-size: 1.4rem;
+  line-height: 1.43; /* 142.857% */
+}
+.cart-preview-item__price {
+  margin-top: 6px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.47; /* 146.667% */
 }
 
 .footer {
