--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -26,6 +26,11 @@ html.dark {
   --sidebar-bg: #292e39;
   --sidebar-shadow: rgba(23, 28, 40, 0.4);
 
+  // Header
+  --header-act-dropdown-bg: #2f3441;
+  --header-act-dropdown-shadow: rgba(23, 28, 40, 0.4);
+  --header-act-dropdown-bottom: #171c28;
+
   // category Item
   --cate-item-bg: #171c28;
   --cate-item-thumb-bg: #292e39;
