--- a/templates/header.html
+++ b/templates/header.html
@@ -17,7 +17,7 @@
         <img src="./assets/img/icons/arrow-left.svg" class="icon" alt="" />
       </button>
       <!-- Moblie -->
-      <a href="#!" class="nav-btn d-none d-md-flex">
+      <a href="./cart.html" class="nav-btn d-none d-md-flex">
         <img src="./assets/img/icons/cart.svg" alt="" class="nav-btn__icon icon" />
         <span class="nav-btn__title">Card</span>
         <span class="nav-btn__qnt">3</span>
@@ -41,7 +41,7 @@
                   <!-- Menu Column -->
                   <div class="menu-column">
                     <div class="menu-column__icon d-lg-none">
-                      <img src="../assets/img/menuIcons/menu-1.1.svg" alt="" class="menu-column__icon-1" />
+                      <img src="./assets/img/menuIcons/menu-1.1.svg" alt="" class="menu-column__icon-1" />
                       <img src="./assets/img/menuIcons/menu-1.2.svg" alt="" class="menu-column__icon-2" />
                     </div>
                     <div class="menu-column__content">
@@ -56,7 +56,7 @@
                               <!-- Menu Column 1.1 -->
                               <div class="menu-column">
                                 <div class="menu-column__icon">
-                                  <img src="../assets/img/menuIcons/menu-2.1.svg" alt="" class="menu-column__icon-1" />
+                                  <img src="./assets/img/menuIcons/menu-2.1.svg" alt="" class="menu-column__icon-1" />
                                   <img src="./assets/img/menuIcons/menu-2.2.svg" alt="" class="menu-column__icon-2" />
                                 </div>
                                 <div class="menu-column__content">
@@ -89,7 +89,7 @@
                               <!-- Menu Column 1.2 -->
                               <div class="menu-column">
                                 <div class="menu-column__icon">
-                                  <img src="../assets/img/menuIcons/menu-2.3.svg" alt="" class="menu-column__icon-1" />
+                                  <img src="./assets/img/menuIcons/menu-2.3.svg" alt="" class="menu-column__icon-1" />
                                   <img src="./assets/img/menuIcons/menu-2.2.svg" alt="" class="menu-column__icon-2" />
                                 </div>
                                 <div class="menu-column__content">
@@ -120,7 +120,7 @@
                               <!-- Menu Column 2.1 -->
                               <div class="menu-column">
                                 <div class="menu-column__icon">
-                                  <img src="../assets/img/menuIcons/menu-3.1.svg" alt="" class="menu-column__icon-1" />
+                                  <img src="./assets/img/menuIcons/menu-3.1.svg" alt="" class="menu-column__icon-1" />
                                   <img src="./assets/img/menuIcons/menu-3.2.svg" alt="" class="menu-column__icon-2" />
                                 </div>
                                 <div class="menu-column__content">
@@ -172,7 +172,7 @@
                               <!-- Menu Column 3.1 -->
                               <div class="menu-column">
                                 <div class="menu-column__icon">
-                                  <img src="../assets/img/menuIcons/menu-4.1.svg" alt="" class="menu-column__icon-1" />
+                                  <img src="./assets/img/menuIcons/menu-4.1.svg" alt="" class="menu-column__icon-1" />
                                   <img src="./assets/img/menuIcons/menu-4.2.svg" alt="" class="menu-column__icon-2" />
                                 </div>
                                 <div class="menu-column__content">
@@ -193,7 +193,7 @@
                               <!-- Menu Column 3.2 -->
                               <div class="menu-column">
                                 <div class="menu-column__icon">
-                                  <img src="../assets/img/menuIcons/menu-4.3.svg" alt="" class="menu-column__icon-1" />
+                                  <img src="./assets/img/menuIcons/menu-4.3.svg" alt="" class="menu-column__icon-1" />
                                   <img src="./assets/img/menuIcons/menu-4.4.svg" alt="" class="menu-column__icon-2" />
                                 </div>
                                 <div class="menu-column__content">
@@ -238,7 +238,7 @@
                               <!-- Menu Column 1.1 -->
                               <div class="menu-column">
                                 <div class="menu-column__icon">
-                                  <img src="../assets/img/menuIcons/menu-3.1.svg" alt="" class="menu-column__icon-1" />
+                                  <img src="./assets/img/menuIcons/menu-3.1.svg" alt="" class="menu-column__icon-1" />
                                   <img src="./assets/img/menuIcons/menu-2.2.svg" alt="" class="menu-column__icon-2" />
                                 </div>
                                 <div class="menu-column__content">
@@ -271,7 +271,7 @@
                               <!-- Menu Column 1.2 -->
                               <div class="menu-column">
                                 <div class="menu-column__icon">
-                                  <img src="../assets/img/menuIcons/menu-1.1.svg" alt="" class="menu-column__icon-1" />
+                                  <img src="./assets/img/menuIcons/menu-1.1.svg" alt="" class="menu-column__icon-1" />
                                   <img src="./assets/img/menuIcons/menu-2.2.svg" alt="" class="menu-column__icon-2" />
                                 </div>
                                 <div class="menu-column__content">
@@ -302,7 +302,7 @@
                               <!-- Menu Column 2.1 -->
                               <div class="menu-column">
                                 <div class="menu-column__icon">
-                                  <img src="../assets/img/menuIcons/menu-4.3.svg" alt="" class="menu-column__icon-1" />
+                                  <img src="./assets/img/menuIcons/menu-4.3.svg" alt="" class="menu-column__icon-1" />
                                   <img src="./assets/img/menuIcons/menu-3.2.svg" alt="" class="menu-column__icon-2" />
                                 </div>
                                 <div class="menu-column__content">
@@ -354,7 +354,7 @@
                               <!-- Menu Column 3.1 -->
                               <div class="menu-column">
                                 <div class="menu-column__icon">
-                                  <img src="../assets/img/menuIcons/menu-4.1.svg" alt="" class="menu-column__icon-1" />
+                                  <img src="./assets/img/menuIcons/menu-4.1.svg" alt="" class="menu-column__icon-1" />
                                   <img src="./assets/img/menuIcons/menu-4.2.svg" alt="" class="menu-column__icon-2" />
                                 </div>
                                 <div class="menu-column__content">
@@ -375,7 +375,7 @@
                               <!-- Menu Column 3.2 -->
                               <div class="menu-column">
                                 <div class="menu-column__icon">
-                                  <img src="../assets/img/menuIcons/menu-4.3.svg" alt="" class="menu-column__icon-1" />
+                                  <img src="./assets/img/menuIcons/menu-4.3.svg" alt="" class="menu-column__icon-1" />
                                   <img src="./assets/img/menuIcons/menu-4.4.svg" alt="" class="menu-column__icon-2" />
                                 </div>
                                 <div class="menu-column__content">
@@ -470,7 +470,7 @@
                     <!-- Menu Column 1.1 -->
                     <div class="menu-column">
                       <div class="menu-column__icon">
-                        <img src="../assets/img/menuIcons/menu-2.1.svg" alt="" class="menu-column__icon-1" />
+                        <img src="./assets/img/menuIcons/menu-2.1.svg" alt="" class="menu-column__icon-1" />
                         <img src="./assets/img/menuIcons/menu-5.1.svg" alt="" class="menu-column__icon-2" />
                       </div>
                       <div class="menu-column__content">
@@ -491,7 +491,7 @@
                     <!-- Menu Column 1.2 -->
                     <div class="menu-column">
                       <div class="menu-column__icon">
-                        <img src="../assets/img/menuIcons/menu-5.2.svg" alt="" class="menu-column__icon-1" />
+                        <img src="./assets/img/menuIcons/menu-5.2.svg" alt="" class="menu-column__icon-1" />
                         <img src="./assets/img/menuIcons/menu-5.3.svg" alt="" class="menu-column__icon-2" />
                       </div>
                       <div class="menu-column__content">
@@ -522,7 +522,7 @@
                     <!-- Menu Column 2.1 -->
                     <div class="menu-column">
                       <div class="menu-column__icon">
-                        <img src="../assets/img/menuIcons/menu-6.1.svg" alt="" class="menu-column__icon-1" />
+                        <img src="./assets/img/menuIcons/menu-6.1.svg" alt="" class="menu-column__icon-1" />
                         <img src="./assets/img/menuIcons/menu-6.2.svg" alt="" class="menu-column__icon-2" />
                       </div>
                       <div class="menu-column__content">
@@ -549,7 +549,7 @@
                     <!-- Menu Column 2.2 -->
                     <div class="menu-column">
                       <div class="menu-column__icon">
-                        <img src="../assets/img/menuIcons/menu-7.1.svg" alt="" class="menu-column__icon-1" />
+                        <img src="./assets/img/menuIcons/menu-7.1.svg" alt="" class="menu-column__icon-1" />
                         <img src="./assets/img/menuIcons/menu-7.2.svg" alt="" class="menu-column__icon-2" />
                       </div>
                       <div class="menu-column__content">
@@ -574,7 +574,7 @@
                     <!-- Menu Column 3.1 -->
                     <div class="menu-column">
                       <div class="menu-column__icon">
-                        <img src="../assets/img/menuIcons/menu-8.1.svg" alt="" class="menu-column__icon-1" />
+                        <img src="./assets/img/menuIcons/menu-8.1.svg" alt="" class="menu-column__icon-1" />
                         <img src="./assets/img/menuIcons/menu-8.2.svg" alt="" class="menu-column__icon-2" />
                       </div>
                       <div class="menu-column__content">
@@ -595,7 +595,7 @@
                     <!-- Menu Column 3.2 -->
                     <div class="menu-column">
                       <div class="menu-column__icon">
-                        <img src="../assets/img/menuIcons/menu-9.1.svg" alt="" class="menu-column__icon-1" />
+                        <img src="./assets/img/menuIcons/menu-9.1.svg" alt="" class="menu-column__icon-1" />
                         <img src="./assets/img/menuIcons/menu-9.2.svg" alt="" class="menu-column__icon-2" />
                       </div>
                       <div class="menu-column__content">
@@ -632,7 +632,7 @@
                     <!-- Menu Column 4.1 -->
                     <div class="menu-column">
                       <div class="menu-column__icon">
-                        <img src="../assets/img/menuIcons/menu-4.1.svg" alt="" class="menu-column__icon-1" />
+                        <img src="./assets/img/menuIcons/menu-4.1.svg" alt="" class="menu-column__icon-1" />
                         <img src="./assets/img/menuIcons/menu-4.2.svg" alt="" class="menu-column__icon-2" />
                       </div>
                       <div class="menu-column__content">
@@ -653,7 +653,7 @@
                     <!-- Menu Column 4.2 -->
                     <div class="menu-column">
                       <div class="menu-column__icon">
-                        <img src="../assets/img/menuIcons/menu-4.3.svg" alt="" class="menu-column__icon-1" />
+                        <img src="./assets/img/menuIcons/menu-4.3.svg" alt="" class="menu-column__icon-1" />
                         <img src="./assets/img/menuIcons/menu-4.4.svg" alt="" class="menu-column__icon-2" />
                       </div>
                       <div class="menu-column__content">
@@ -704,8 +704,115 @@
 
     <!-- Action -->
     <div class="top-act">
-      <a href="./signIn.html" class="btn btn--text d-md-none">Sign In</a>
-      <a href="./signUp.html" class="btn btn--primary top-act__sign-up">Sign Up</a>
+      <!-- Action -->
+      <!-- <div class="top-act">
+        <a href="./signIn.html" class="btn btn--text d-md-none">Sign In</a>
+        <a href="./signUp.html" class="btn btn--primary top-act__sign-up">Sign Up</a>
+      </div> -->
+
+      <div class="top-act__group d-lg-none">
+        <button class="top-act__btn">
+          <img src="./assets/img/icons/search.svg" alt="" class="top-act__icon icon" />
+        </button>
+      </div>
+      <div class="top-act__group d-md-none">
+        <button class="top-act__btn">
+          <img src="./assets/img/icons/heart.svg" alt="" class="top-act__icon icon" />
+          <span class="top-act__title">03</span>
+        </button>
+
+        <div class="top-act__separate"></div>
+
+        <div class="top-act__btn-wrap">
+          <a href="./cart.html" class="top-act__btn">
+            <img src="./assets/img/icons/cart.svg" alt="" class="top-act__icon icon" />
+            <span class="top-act__title">$65.42</span>
+          </a>
+
+          <!-- Dropdown -->
+          <div class="act-dropdown">
+            <div class="act-dropdown__inner">
+              <img src="./assets/img/icons/arrow-up.svg" alt="" class="act-dropdown__arrow" />
+              <div class="act-dropdown__top">
+                <h2 class="act-dropdown__title">You have 3 item</h2>
+                <a href="./cart.html" class="act-dropdown__view-all">See All</a>
+              </div>
+              <div class="row row-cols-4 gx-2 gy-2">
+                <!-- Cart Preview Item 1 -->
+                <div class="col">
+                  <article class="cart-preview-item">
+                    <div class="cart-preview-item__img-wrap">
+                      <img src="./assets/img/product/product-1.png" alt="" class="cart-preview-item__thumb" />
+                    </div>
+                    <h3 class="cart-preview-item__title">Lavazza Coffee Blends</h3>
+                    <p class="cart-preview-item__price">$329.00</p>
+                  </article>
+                </div>
+                <!-- Cart Preview Item 2 -->
+                <div class="col">
+                  <article class="cart-preview-item">
+                    <div class="cart-preview-item__img-wrap">
+                      <img src="./assets/img/product/product-2.png" alt="" class="cart-preview-item__thumb" />
+                    </div>
+                    <h3 class="cart-preview-item__title">Coffee Beans Espresso</h3>
+                    <p class="cart-preview-item__price">$$39.99</p>
+                  </article>
+                </div>
+                <!-- Cart Preview Item 3 -->
+                <div class="col">
+                  <article class="cart-preview-item">
+                    <div class="cart-preview-item__img-wrap">
+                      <img src="./assets/img/product/product-3.png" alt="" class="cart-preview-item__thumb" />
+                    </div>
+                    <h3 class="cart-preview-item__title">Qualità Oro Mountain</h3>
+                    <p class="cart-preview-item__price">$47.00</p>
+                  </article>
+                </div>
+
+                <!-- Cart Preview Item 3 -->
+                <div class="col">
+                  <article class="cart-preview-item">
+                    <div class="cart-preview-item__img-wrap">
+                      <img src="./assets/img/product/product-3.png" alt="" class="cart-preview-item__thumb" />
+                    </div>
+                    <h3 class="cart-preview-item__title">Qualità Oro Mountain</h3>
+                    <p class="cart-preview-item__price">$47.00</p>
+                  </article>
+                </div>
+              </div>
+
+              <!-- act-dropdown Bottom -->
+              <div class="act-dropdown__bottom">
+                <div class="act-dropdown__row">
+                  <span class="act-dropdown__lable">Subtotal</span>
+                  <span class="act-dropdown__value">$415.99</span>
+                </div>
+                <div class="act-dropdown__row">
+                  <span class="act-dropdown__lable">Texes</span>
+                  <span class="act-dropdown__value">Free</span>
+                </div>
+                <div class="act-dropdown__row">
+                  <span class="act-dropdown__lable">Shipping</span>
+                  <span class="act-dropdown__value">$10.00</span>
+                </div>
+                <div class="act-dropdown__row act-dropdown__row--bold">
+                  <span class="act-dropdown__lable">Total Price</span>
+                  <span class="act-dropdown__value">$425.99</span>
+                </div>
+              </div>
+
+              <!--Btn Check Out -->
+              <div class="act-dropdown__checkout">
+                <a href="./cart.html" class="btn btn--primary btn--rounded act-dropdown__checkout-btn">Check Out All</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="top-act__user">
+        <img src="./assets/img/avatar.jpg" alt="" class="top-act__avatar" />
+      </div>
     </div>
   </div>
 </div>
