--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -79,6 +79,17 @@ html.dark {
   // Reivew card
   --review-card-bg: #171c28;
 
+  // Cart
+  --cart-breadcumrs-bg: #171c28;
+  --cart-info-bg: #171c28;
+  --cart-info-shadow: rgba(23, 28, 40, 0.2);
+  --cart-border-color: #292e39;
+  --cart-gift-shadow: rgba(23, 28, 40, 0.2);
+
+  // dialog
+  --dialog-bg: #2f3441;
+  --dialog-shadow: rgba(23, 28, 40, 0.4);
+
   @include abstracts.screen(lg) {
     --header-shadow-color: rgba(0, 0, 0, 0.2);
   }
