--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -65,6 +65,18 @@
 
   // Text content
   --text-content-hr-bg: #ebebeb;
+
+  // Cart
+  --cart-breadcumrs-bg: #fff;
+  --cart-info-bg: #fff;
+  --cart-info-shadow: rgba(237, 237, 246, 0.2);
+  --cart-border-color: #d2d1d6;
+  --cart-gift-shadow: rgba(237, 237, 246, 0.2);
+
+  // dialog
+  --dialog-bg: #fff;
+  --dialog-shadow: rgba(237, 237, 246, 0.2);
+
   @include abstracts.screen(md) {
     --auth-intro-bg: #fff;
 
