--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -28,6 +28,16 @@ button {
   padding: 0;
   cursor: pointer;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active,
+input:-webkit-autofill:hover {
+  transition: background-color 1s 9999s;
+  -webkit-text-fill-color: var(--text-color);
+  caret-color: var(--text-color);
+}
+
 a,
 img,
 button,
