--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -6,7 +6,22 @@ $error-color: #ed4337;
     pointer-events: none;
   }
 
+  &__row {
+    display: flex;
+    gap: 30px;
+
+    @include abstracts.screen(md) {
+      gap: 20px;
+    }
+
+    @include abstracts.screen(sm) {
+      flex-direction: column;
+      gap: 0;
+    }
+  }
+
   &__group {
+    flex: 1;
     margin-top: 30px;
   }
 
@@ -54,6 +69,11 @@ $error-color: #ed4337;
     border-radius: 10px;
     border: 1.6px solid #d2d1d6;
 
+    &--small {
+      border-radius: 8px;
+      height: 42px;
+    }
+
     &:focus-within {
       border-color: #77dae6;
     }
@@ -66,6 +86,7 @@ $error-color: #ed4337;
   &__input {
     flex: 1;
     height: 100%;
+    width: 100%;
 
     font-size: 1.8rem;
     font-weight: 500;
