--- a/scss/components/modal.scss
+++ b/scss/components/modal.scss
@@ -1,5 +1,5 @@
 @use "../abstracts";
-.dialog {
+.modal {
   position: fixed;
   inset: 0;
   z-index: 99;
@@ -10,6 +10,12 @@
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s ease, visibility 0.3s ease;
+
+  &__heading {
+    font-size: 2.2rem;
+    font-weight: 500;
+    line-height: 1.45; /* 145.455% */
+  }
 
   &.show {
     opacity: 1;
@@ -25,11 +31,30 @@
   &__content {
     position: relative;
     z-index: 1;
-    max-width: min(450px, 100% - 40px);
     padding: 30px;
+
+    width: min(var(--content-width, 650px), 100% - 40px);
     border-radius: 20px;
-    background: var(--dialog-bg);
-    box-shadow: 0px 20px 60px 10px var(--dialog-shadow);
+    background: var(--modal-bg);
+    box-shadow: 0px 20px 60px 10px var(--modal-shadow);
+
+    @include abstracts.screen(sm) {
+      padding: 20px;
+    }
+  }
+
+  &--small &__content {
+    --content-width: 400px;
+  }
+
+  &--large &__content {
+    --content-width: 1100px;
+  }
+
+  &--full &__content {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
   }
 
   &__text {
@@ -48,8 +73,6 @@
   }
 
   @include abstracts.screen(md) {
-    padding: 20px;
-
     &__btn {
       flex: 1;
     }
