--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -86,9 +86,9 @@ html.dark {
   --cart-border-color: #292e39;
   --cart-gift-shadow: rgba(23, 28, 40, 0.2);
 
-  // dialog
-  --dialog-bg: #2f3441;
-  --dialog-shadow: rgba(23, 28, 40, 0.4);
+  // modal
+  --modal-bg: #2f3441;
+  --modal-shadow: rgba(23, 28, 40, 0.4);
 
   @include abstracts.screen(lg) {
     --header-shadow-color: rgba(0, 0, 0, 0.2);
