--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -73,9 +73,9 @@
   --cart-border-color: #d2d1d6;
   --cart-gift-shadow: rgba(237, 237, 246, 0.2);
 
-  // dialog
-  --dialog-bg: #fff;
-  --dialog-shadow: rgba(237, 237, 246, 0.2);
+  // modal
+  --modal-bg: #fff;
+  --modal-shadow: rgba(237, 237, 246, 0.2);
 
   @include abstracts.screen(md) {
     --auth-intro-bg: #fff;
