--- a/scss/components/modal.scss
+++ b/scss/components/modal.scss
@@ -67,9 +67,9 @@
     align-items: center;
     justify-content: flex-end;
     flex-wrap: wrap;
-    gap: 30px;
+    // gap: 20px;
 
-    margin-top: 30px;
+    margin-top: 50px;
   }
 
   @include abstracts.screen(md) {
@@ -78,6 +78,7 @@
     }
 
     &__bottom {
+      margin-top: 30px;
       gap: 20px;
     }
   }
